@@ -6568,10 +6568,9 @@ Hyrule's Adventure
 dialog{
   id = "scripts.menus.introduction.intro_1",
   text = [[
-$1Il y a quelques générations,
-dans le Royaume d'Hyrule
-entouré de montagnes et
-de forêts$0.$0.$0.
+$1Il y a longtemps, dans le beau
+Royaume d'Hyrule entouré de
+montagnes et de forêts$0.$0.$0.
 ]],
 }
 
@@ -6619,8 +6618,8 @@ dialog{
   text = [[
 $1Un jour, un groupe de voleurs
 menés par leur chef Ganondorf
-mit la main sur la Triforce et
-il fit le souhait de posséder
+mit la main sur la Triforce et il
+fit le souhait de posséder
 une armée puissante
 pour conquérir Hyrule.$0
 ]],
