@@ -587,8 +587,8 @@ tile{
 destination{
   name = "destination",
   layer = 0,
-  x = 152,
-  y = 397,
+  x = -8,
+  y = 13,
   direction = 1,
 }
 
@@ -736,8 +736,9 @@ tile{
 }
 
 custom_entity{
+  name = "world_map",
   layer = 1,
-  x = 24,
+  x = 32,
   y = 253,
   width = 272,
   height = 240,
