@@ -1,5 +1,5 @@
 properties{
-  x = 3120,
+  x = 5120,
   y = 2880,
   width = 1280,
   height = 1440,
