@@ -14908,7 +14908,7 @@ tile{
 tile{
   layer = 0,
   x = 488,
-  y = 968,
+  y = 976,
   width = 96,
   height = 8,
   pattern = "2203",
@@ -28706,78 +28706,6 @@ tile{
   layer = 0,
   x = 1088,
   y = 632,
-  width = 8,
-  height = 8,
-  pattern = "101",
-}
-
-tile{
-  layer = 0,
-  x = 432,
-  y = 928,
-  width = 8,
-  height = 8,
-  pattern = "100",
-}
-
-tile{
-  layer = 0,
-  x = 440,
-  y = 928,
-  width = 8,
-  height = 8,
-  pattern = "101",
-}
-
-tile{
-  layer = 0,
-  x = 440,
-  y = 936,
-  width = 8,
-  height = 8,
-  pattern = "100",
-}
-
-tile{
-  layer = 0,
-  x = 432,
-  y = 936,
-  width = 8,
-  height = 8,
-  pattern = "101",
-}
-
-tile{
-  layer = 0,
-  x = 448,
-  y = 928,
-  width = 8,
-  height = 8,
-  pattern = "100",
-}
-
-tile{
-  layer = 0,
-  x = 456,
-  y = 928,
-  width = 8,
-  height = 8,
-  pattern = "101",
-}
-
-tile{
-  layer = 0,
-  x = 456,
-  y = 936,
-  width = 8,
-  height = 8,
-  pattern = "100",
-}
-
-tile{
-  layer = 0,
-  x = 448,
-  y = 936,
   width = 8,
   height = 8,
   pattern = "101",
