@@ -1529,6 +1529,7 @@ sound{ id = "danger", description = "Danger" }
 sound{ id = "door_closed", description = "Closed Door" }
 sound{ id = "door_open", description = "Open Door" }
 sound{ id = "door_unlocked", description = "Unlocked Door" }
+sound{ id = "enemies/_miniboss/phantom_ganon/laugh", description = "Phantom Ganon laugh" }
 sound{ id = "enemies/bari", description = "Bari" }
 sound{ id = "enemies/beamos", description = "Beamos" }
 sound{ id = "enemies/gold_skulltula_token_spawn", description = "Gold Skulltula Token sapwn" }
